# fista.triton

./: README.md  benchmark_basis.py  benchmark_iter.py  prototype.py  requirements.txt  setup.cfg
benchmark/: fista_num_basis.csv  fista_num_iter.csv
fista/: __init__.py  fista_pytorch.py  fista_triton.py  utils.py
fista/kernels/: fista_step.py  mm_sub.py
tests/: test_mm_sub.py
