[metadata]
name = FISTA.Triton
version = 1.0.0
author = Tamás Ficsor
author_email = ficsort@inf.u-szeged.hu
description = A Triton implementation of FISTA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ficstamas/fista.triton
project_urls =
    Bug Tracker = https://github.com/ficstamas/FateML/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch
    triton
    numpy
